Angular table for events

--- a/Front/ProEventos-App/src/app/app.component.html
+++ b/Front/ProEventos-App/src/app/app.component.html
@@ -1,6 +1,7 @@
+<app-navbar></app-navbar>
+
 <div class="container">
   <app-eventos></app-eventos>
-  <app-palestrantes></app-palestrantes>
 
   <router-outlet></router-outlet>
 </div>
