--- a/Front/ProEventos-App/src/app/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/eventos/eventos.component.html
@@ -1,6 +1,53 @@
-<p>Eventos</p>
+<h2>Eventos</h2>
+<hr>
 
-<div *ngFor="let evento of eventos">
-  <p><b>Tema</b>: {{evento.tema}}</p>
-  <p><b>Local</b>: {{evento.local}}</p>
+<div class="row row-cols-lg-auto g-3 align-items-center mb-2">
+  <div class="col-12">
+    <label>Filtro:</label>
+  </div>
+  <div class="col-12">
+    <input type="text" class="form-control mr-2" placeholder="buscar" [(ngModel)]="filtroLista">
+  </div>
 </div>
+<table class="table table-striped">
+  <thead class="thead-dark">
+    <tr>
+      <th>
+        <button (click)="exibirImagem = !exibirImagem" class="btn btn-outline-light btn-sm">
+          {{exibirImagem ? 'Exibir imagem' : 'Ocultar imagem'}}
+        </button>
+      </th>
+      <th>#</th>
+      <th>Tema</th>
+      <th>Local</th>
+      <th>Data</th>
+      <th>Qtd Pessoas</th>
+      <th>Lote</th>
+      <th>Opções</th>
+    </tr>
+  </thead>
+  <tbody *ngIf="eventos && eventos.length">
+    <tr *ngFor="let evento of eventosFiltrados">
+      <td>
+        <img [collapse]="exibirImagem" [isAnimated]="true" src="/assets/{{evento.imagemUrl}}" alt="images" [style.width.px]="larguraImagem" [style.margin.px]="margemImagem">
+      </td>
+      <td>{{evento.eventoId}}</td>
+      <td>{{evento.tema}}</td>
+      <td>{{evento.local}}</td>
+      <td>{{evento.dataEvento}}</td>
+      <td>{{evento.qtdPessoas}}</td>
+      <td>{{evento.lote}}</td>
+      <td>
+        <button type="button" class="btn btn-primary btn-sm me-2">Editar</button>
+        <button type="button" class="btn btn-danger btn-sm">Excluir</button>
+      </td>
+    </tr>
+  </tbody>
+  <tfoot *ngIf="!eventos.length">
+    <tr>
+      <td colspan="8" class="text-center">
+        <h4>Eventos não encontrados!</h4>
+      </td>
+    </tr>
+  </tfoot>
+</table>
