--- a/Front/ProEventos-App/src/app/app.component.html
+++ b/Front/ProEventos-App/src/app/app.component.html
@@ -1,7 +1,14 @@
-<app-navbar></app-navbar>
-
-<div class="container">
+<div class="container w-auto">
+  <app-navbar></app-navbar>
   <app-eventos></app-eventos>
 
   <router-outlet></router-outlet>
 </div>
+
+<ngx-spinner
+  type="ball-scale-multiple"
+  bdColor="rgba(51,51,51,0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-scale-multiple"
+></ngx-spinner>
