--- a/Front/ProEventos-App/src/app/app.component.html
+++ b/Front/ProEventos-App/src/app/app.component.html
@@ -1,7 +1,5 @@
-<div class="container w-auto">
-  <app-navbar></app-navbar>
-  <app-eventos></app-eventos>
-
+<app-navbar></app-navbar>
+<div class="container">
   <router-outlet></router-outlet>
 </div>
 
@@ -10,5 +8,4 @@
   bdColor="rgba(51,51,51,0.8)"
   size="medium"
   color="#fff"
-  type="ball-scale-multiple"
 ></ngx-spinner>
