--- a/Front/ProEventos-App/src/app/components/user/login/login.component.html
+++ b/Front/ProEventos-App/src/app/components/user/login/login.component.html
@@ -11,7 +11,7 @@
       <input type="password" id="password" class="form-control" placeholder="Senha" name="password" required>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
       <p class="mt-4 mb-2 text-muted">Não tem login? Cadastre-se abaixo</p>
-      <a class="btn btn-lg btn-link btn-block">Quero me cadastrar</a>
+      <a class="btn btn-lg btn-link btn-block" routerLink="/user/registration">Quero me cadastrar</a>
     </form>
 
   </div>
