--- a/Front/ProEventos-App/src/app/components/user/registration/registration.component.html
+++ b/Front/ProEventos-App/src/app/components/user/registration/registration.component.html
@@ -9,38 +9,74 @@
 
   <div class="col-md-6">
 
-    <form class="p-1">
+    <form class="p-1" [formGroup]="form">
       <div class="pb-2 d-block d-md-none">
         <h3 class="border-bottom">Cadastro de Usuário</h3>
       </div>
       <div class="form-row">
         <div class="form-group col-sm-6">
           <label>Primeiro Nome</label>
-          <input type="text" class="form-control" placeholder="Insira o Primeiro nome" />
+          <input type="text" class="form-control" placeholder="Insira o Primeiro nome" formControlName="primeiroNome"
+                 [ngClass]="{'is-invalid': f.primeiroNome.errors && f.primeiroNome.touched}" />
+        </div>
+        <div class="invalid-feedback" [ngClass]="{'d-block': f.primeiroNome.hasError('required') && f.primeiroNome.touched}">
+          Primeiro nome é obrigatorio
+        </div>
+        <div class="invalid-feedback" [ngClass]="{'d-block': f.primeiroNome.hasError('minlength') || f.primeiroNome.hasError('maxlength')}">
+          Deve ter entre 2 e 50 caracteres
         </div>
         <div class="form-group col-sm-6">
           <label>Último nome</label>
-          <input type="text" class="form-control" placeholder="Insira o Último nome" />
+          <input type="text" class="form-control" placeholder="Insira o Último nome" formControlName="ultimoNome"
+                 [ngClass]="{'is-invalid': f.ultimoNome.errors && f.ultimoNome.touched}"/>
+        </div>
+        <div class="invalid-feedback" [ngClass]="{'d-block': f.ultimoNome.hasError('required') && f.ultimoNome.touched}">
+          Ultimo nome é obrigatorio
+        </div>
+        <div class="invalid-feedback" [ngClass]="{'d-block': f.ultimoNome.hasError('minlength') || f.ultimoNome.hasError('maxlength')}">
+          Deve ter entre 2 e 50 caracteres
         </div>
       </div>
       <div class="form-group">
         <label for="">Email:</label>
-        <input class="form-control" type="text" placeholder="Insira o Nome Completo" />
+        <input class="form-control" type="text" placeholder="Insira o Nome Completo" formControlName="email"
+               [ngClass]="{'is-invalid': f.email.errors && f.email.touched}" />
+        <div class="invalid-feedback" *ngIf="(f.email.hasError('required') || f.email.hasError('email')) && f.email.touched">
+          Entre com um email válido
+        </div>
       </div>
       <div class="form-group">
         <label for="">Usuario:</label>
-        <input class="form-control" type="text" placeholder="Insira o nome de Usuário" />
+        <input class="form-control" type="text" placeholder="Insira o nome de Usuário" formControlName="usuario"
+               [ngClass]="{'is-invalid': f.ultimoNome.errors && f.ultimoNome.touched}"/>
       </div>
-      <div class="form-row">
-        <div class="form-group col-sm-6">
-          <label for="">Senha:</label>
-          <input class="form-control" type="password" placeholder="Digite uma Senha" />
+        <div class="invalid-feedback" [ngClass]="{'d-block': f.usuario.hasError('required') && f.usuario.touched}">
+          Usuario é obrigatorio
         </div>
-        <div class="form-group col-sm-6">
-          <label for="">Confirmar Senha:</label>
-          <input class="form-control" type="password" placeholder="Confirme a Senha" />
+        <div class="invalid-feedback" [ngClass]="{'d-block': f.usuario.hasError('minlength') || f.usuario.hasError('maxlength')}">
+          Deve ter entre 2 e 50 caracteres
         </div>
-      </div>
+        <div class="form-row">
+          <div class="form-group col-sm-6">
+            <label for="">Senha:</label>
+            <input class="form-control" type="password" placeholder="Digite uma Senha" formControlName="senha"
+                   [ngClass]="{'is-invalid': f.senha.errors && f.senha.touched}" />
+          </div>
+          <div class="invalid-feedback" [ngClass]="{'d-block': f.senha.hasError('required') && f.senha.touched}">
+            Senha é obrigatorio
+          </div>
+          <div class="invalid-feedback" [ngClass]="{'d-block': f.senha.hasError('minlength') || f.senha.hasError('maxlength')}">
+            Deve ter entre 6 e 50 caracteres
+          </div>
+          <div class="form-group col-sm-6">
+            <label for="">Confirmar Senha:</label>
+            <input class="form-control" type="password" placeholder="Confirme a Senha" formControlName="confirmarSenha"
+                   [ngClass]="{'is-invalid': f.confirmarSenha.errors && f.confirmarSenha.touched}" />
+          </div>
+          <div class="invalid-feedback" [ngClass]="{'d-block': f.confirmarSenha.hasError('mustMatch')}">
+            Confirmação de senha incorreta
+          </div>
+        </div>
       <div class="form-row p-1 mb-3">
         <div class="custom-control custom-checkbox">
           <input type="checkbox" class="custom-control-input" id="customCheck1">
