Implementing form validation on perfil.component

--- a/Front/ProEventos-App/src/app/components/user/perfil/perfil.component.html
+++ b/Front/ProEventos-App/src/app/components/user/perfil/perfil.component.html
@@ -1,7 +1,7 @@
 <app-titulo [titulo]="'Perfil'"></app-titulo>
 
 <div class="card rounded shadow-sm">
-  <form>
+  <form [formGroup]="form">
     <div class="row p-3">
       <div class="col-lg-3 pt-1">
         <div class="card mb-3">
@@ -44,9 +44,9 @@
           </div>
           <div class="form-group col">
             <label>Título</label>
-            <select class="form-control">
+            <select class="form-control" formControlName="titulo" [ngClass]="{'is-invalid': f.titulo.errors && f.titulo.touched}">
               <option value=""></option>
-              <option value="0">Não Quero</option>
+              <option value="Senhorita">Não quero divulgar</option>
               <option value="Senhorita">Tecnólogo(a)</option>
               <option value="Senhorita">Bacharel</option>
               <option value="Senhorita">Especialista</option>
@@ -55,38 +55,67 @@
               <option value="Senhorita">Doutor(a)</option>
               <option value="Senhorita">Pós Doc</option>
             </select>
+            <div class="invalid-feedback">
+              Titulo é obrigatorio
+            </div>
           </div>
           <div class="form-group col-sm-5">
             <label>Primeiro Nome</label>
-            <input type="text" class="form-control" />
-
+            <input type="text" class="form-control" formControlName="primeiroNome" [ngClass]="{'is-invalid': f.primeiroNome.errors && f.primeiroNome.touched}" />
+          </div>
+          <div class="invalid-feedback" [ngClass]="{'d-block': f.primeiroNome.hasError('required') && f.primeiroNome.touched}">
+            Primeiro nome é obrigatorio
+          </div>
+          <div class="invalid-feedback" [ngClass]="{'d-block': f.primeiroNome.hasError('minlength') || f.primeiroNome.hasError('maxlength')}">
+            Deve ter entre 2 e 50 caracteres
           </div>
           <div class="form-group col-sm-5">
             <label>Último nome</label>
-            <input type="text" class="form-control" />
+            <input type="text" class="form-control" formControlName="ultimoNome" [ngClass]="{'is-invalid': f.ultimoNome.errors && f.ultimoNome.touched}" />
 
+          </div>
+          <div class="invalid-feedback" [ngClass]="{'d-block': f.ultimoNome.hasError('required') && f.ultimoNome.touched}">
+            Ultimo nome é obrigatorio
+          </div>
+          <div class="invalid-feedback" [ngClass]="{'d-block': f.ultimoNome.hasError('minlength') || f.ultimoNome.hasError('maxlength')}">
+            Deve ter entre 2 e 50 caracteres
           </div>
         </div>
         <div class="form-row">
           <div class="form-group col-sm-5">
             <label>E-mail</label>
-            <input type="text" class="form-control" />
+            <input type="text" class="form-control" formControlName="email" [ngClass]="{'is-invalid': f.email.errors && f.email.touched}" />
+            <div class="invalid-feedback" *ngIf="(f.email.hasError('required') || f.email.hasError('email')) && f.email.touched">
+              Entre com um email válido
+            </div>
           </div>
           <div class="form-group col-sm-4">
             <label>Telefone</label>
-            <input type="text" class="form-control" />
+            <input type="text" class="form-control" formControlName="telefone" [ngClass]="{'is-invalid': f.telefone.errors && f.telefone.touched}" />
+            <div class="invalid-feedback">
+              Telefone é obrigatorio
+            </div>
           </div>
           <div class="form-group col-sm">
             <label>Função</label>
-            <select class="form-control">
+            <select class="form-control" formControlName="funcao" [ngClass]="{'is-invalid': f.funcao.errors && f.funcao.touched}">
               <option value=""></option>
               <option value="Participante">Participante</option>
               <option value="Palestrante">Palestrante</option>
             </select>
+            <div class="invalid-feedback">
+              Função é obrigatorio
+            </div>
           </div>
           <form-group class="col-12">
             <label>Descrição</label>
-            <input type="text" class="form-control" />
+            <input type="text" class="form-control" formControlName="descricao" [ngClass]="{'is-invalid': f.descricao.errors && f.descricao.touched}" />
+            <div class="invalid-feedback" *ngIf="f.descricao.hasError('required') && f.descricao.touched">
+              Descrição é obrigatoria
+            </div>
+            <div class="invalid-feedback" *ngIf="f.descricao.hasError('minlength') || f.descricao.hasError('maxlength')">
+              Deve ter entre 2 e 50 caracteres
+            </div>
           </form-group>
         </div>
         <div>
@@ -96,11 +125,20 @@
         <div class="form-row">
           <div class="form-group col-sm">
             <label>Senha</label>
-            <input type="password" class="form-control" />
+            <input type="password" class="form-control" formControlName="senha" [ngClass]="{'is-invalid': f.senha.errors && f.senha.touched}" />
+          </div>
+          <div class="invalid-feedback" [ngClass]="{'d-block': f.senha.hasError('required') && f.senha.touched}">
+            Senha é obrigatorio
+          </div>
+          <div class="invalid-feedback" [ngClass]="{'d-block': f.senha.hasError('minlength') || f.senha.hasError('maxlength')}">
+            Deve ter entre 6 e 50 caracteres
           </div>
           <div class="form-group col-sm">
             <label>Confirmar Senha</label>
-            <input type="password" class="form-control" />
+            <input type="password" class="form-control" formControlName="confirmarSenha" [ngClass]="{'is-invalid': f.confirmarSenha.errors && f.confirmarSenha.touched}" />
+          </div>
+          <div class="invalid-feedback" [ngClass]="{'d-block': f.confirmarSenha.hasError('mustMatch')}">
+            Confirmação de senha incorreta
           </div>
         </div>
       </div>
